kubernetes/apps/network/external-services/printer/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app printer
spec:
  hostnames: ["printer.${DOMAIN_APP}", "canon.${DOMAIN_APP}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 80
